# employee-achievements-tracker

./: README.md  pyproject.toml  requirements.txt
core/: models.py  settings.py  urls.py
employee_tracker/: apps.py  models.py  serializers.py  urls.py  views.py
employee_tracker/migrations/: 0001_initial.py
employee_tracker/tests/: test_models.py  test_views.py
