[tool.poetry]
name = "employee-achievements-tracker"
version = "0.1.0"
description = "A Django-based API for tracking employee achievements within an organization."
authors = ["Hojayfa Rahman <hojayfarahman@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
djangorestframework = "^3.15.2"
django-filter = "^24.3"
drf-spectacular = "^0.27.2"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]
coverage = "^7.6.1"
